ezyplot-x1/force-app/main/default/objects/LR_ownership__c/LR_ownership__c.object-meta.xml
<CustomObject>
    <label>LR ownership</label>
    <nameField>
        <label>Property Address</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LR ownerships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>