ezyplot-x1/force-app/main/default/objects/LR_ownership__c/fields/Change_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Change_Indicator__c</fullName>
    <label>Change Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>