ezyplot-x1/force-app/main/default/objects/LR_ownership__c/fields/Company_Registration_No_1__c.field-meta.xml
<CustomField>
    <fullName>Company_Registration_No_1__c</fullName>
    <label>Company Registration No. (1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>