ezyplot-x1/force-app/main/default/objects/LR_ownership__c/fields/Country_Incorporated_4__c.field-meta.xml
<CustomField>
    <fullName>Country_Incorporated_4__c</fullName>
    <label>Country Incorporated (4)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>