ezyplot-x1/force-app/main/default/objects/LR_ownership__c/fields/Price_Paid__c.field-meta.xml
<CustomField>
    <fullName>Price_Paid__c</fullName>
    <label>Price Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>