ezyplot-x1/force-app/main/default/objects/LR_ownership__c/fields/Proprietor_1_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Proprietor_1_Address_2__c</fullName>
    <label>Proprietor (1) Address (2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>