ezyplot-x1/force-app/main/default/objects/LR_ownership__c/fields/Proprietor_Name_4__c.field-meta.xml
<CustomField>
    <fullName>Proprietor_Name_4__c</fullName>
    <label>Proprietor Name (4)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>