ezyplot-x1/force-app/main/default/objects/LR_ownership__c/fields/Proprietorship_Category_3__c.field-meta.xml
<CustomField>
    <fullName>Proprietorship_Category_3__c</fullName>
    <label>Proprietorship Category (3)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>